# moos-ivp-pearl

./: .gitignore  CMakeLists.txt  README  README.md  build.sh
missions/: README
missions/RPi_sim/: pearl.moos
missions/charles_river/pearl_fld_square/: MIT_sailing_pavilion.info  MIT_sailing_pavilion_high_res.info  README  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_iDualGPS.moos  plug_iPEARL.moos  plug_iRPISerial.moos  plug_origin_warp.moos  plug_pEchoVar.moos  plug_uProcessWatch.moos
missions/deep_pond/RPi_sim/: README
missions/deep_pond/pearl_fld_lawnmower/: plug_pHelmIvP.moos
missions/deep_pond/pearl_fld_long/: meta_shoreside.moos  meta_vehicle.moos  plug_iChargeController.moos  plug_pLogger.moos  plug_pPearlPID.moos  plug_uTimerScript.moos
missions/deep_pond/pearl_fld_mit/: README  deep_pond_map.tif  meta_shoreside.moos  meta_vehicle.bhv  plug_pShare.moos
missions/deep_pond/pearl_fld_remote/: launch_vehicle.sh  meta_vehicle.bhv  plug_pPearlPID.moos
missions/deep_pond/pearl_fld_simple/: README  meta_shoreside.moos  plug_pLogger.moos
missions/deep_pond/pearl_fld_square/: meta_vehicle.bhv  plug_iGPS.moos  plug_origin_warp.moos
missions/deep_pond/pearl_fld_test/: meta_shoreside.moos  meta_vehicle.moos  plug_pEchoVar.moos  plug_uTimerScript.moos
missions/deep_pond/pearl_fld_waypoint/: meta_vehicle.moos  plug_pLogger.moos  plug_uFldNodeBroker.moos
missions/deep_pond/pearl_sim/: README  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  plug_iPEARL.moos  plug_pEchoVar.moos  plug_pHelmIvP.moos  plug_pNodeReporter.moos
missions/images/: MIT_sailing_pavilion_high_res.info  deep_pond.tif  pleasant_bay.info  pleasant_bay_high_res.info
missions/laptop_sim/: pearl.bhv  pearl.moos
missions/pearl_fld_lawnmower/: meta_shoreside.moos  meta_vehicle.bhv  plug_uSunTracking.moos
missions/pearl_fld_long/: meta_vehicle.bhv  plug_uTimerScript.moos
missions/pearl_fld_mit/: plug_pHostInfo.moos
missions/pearl_fld_remote/: meta_vehicle.moos  plug_iGPS.moos  plug_origin_warp.moos  plug_uProcessWatch.moos
missions/pearl_fld_simple/: launch_shoreside.sh  meta_shoreside.moos  meta_vehicle.bhv  plug_pEchoVar.moos  plug_pPearlPID.moos
missions/pearl_fld_square/: deep_pond_map.info  meta_shoreside.moos
missions/pearl_fld_test/: launch_shoreside.sh  launch_vehicle.sh  launch_vehicle.sh~  meta_vehicle.bhv  meta_vehicle.moos  plug_iGPS.moos  plug_iPEARL.moos  plug_origin_warp.moos  plug_pLogger.moos  plug_pPearlPID.moos  plug_uProcessWatch.moos  plug_uTimerScript.moos
missions/pearl_fld_waypoint_remote/: launch_vehicle.sh  meta_vehicle.moos
missions/pearl_sim/: meta_vehicle.bhv  meta_vehicle.moos  plug_pPearlPID.moos  plug_uProcessWatch.moos  plug_uSunTracking.moos
missions/pearl_sim/Attic/: plug_iRemote.moos
missions/pleasant_bay/pearl_fld_line/: launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.moos  plug_iDualGPS.moos  plug_iPEARL.moos  plug_origin_warp.moos  plug_pEchoVar.moos
missions/pleasant_bay/pearl_fld_simple/: README  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  pleasant_bay_sat.info  pleasant_bay_sat.tif  (+2 more)
scripts/: MagCalPlot.py  README  README_calibration  arduinoAccelPlot.py  arduinoEulerPlot.py  arduinoGyroPlot.py  arduinoMagPlot.py  rpi_comms_test.py
scripts/PEARL_frontseat_bluetooth/: PEARL_frontseat_bluetooth.ino
scripts/PEARL_frontseat_v2/: PEARL_frontseat_v2.ino
scripts/PEARL_frontseat_with_anchor/: PEARL_frontseat_with_anchor.ino
scripts/PEARL_imu_calibration/: PEARL_imu_calibration.ino
scripts/calibrated_orientation/: LSM6DS_LIS3MDL.h  LSM9DS.h  calibrated_orientation.ino
scripts/mini_frontseat/: mini_frontseat.ino
scripts/sensor_calibration_write/: sensor_calibration_write.ino
src/: CMakeLists.txt
src/attic/: PEARL.cpp  PEARL.h
src/attic/iGPSDevice/: .project  CMakeLists.txt  GPSDevice.cpp  GPSDevice.h  GPSDeviceInfo.cpp  GPSDeviceInfo.h  iGPSDeviceMain.cpp
src/attic/iGPSSim/: CMakeLists.txt  GPSSim.cpp  GPSSim.h  GPSSimInfo.cpp  GPSSimInfo.h  GPSSimMain.cpp
src/attic/iGarmin/: Garmin.cpp  Garmin.h  Garmin_Info.cpp  Garmin_Info.h
src/attic/iPEARL/: CMakeLists.txt  PEARL.cpp  PEARL.h  PEARL_Info.cpp
src/attic/uSimPEARL/: CMakeLists.txt  PEARLSimMain.cpp  PEARLSimServer.h  PEARLSim_Info.cpp  PEARLSim_Info.h
src/iChargeController/: CMakeLists.txt  ChargeController.cpp  ChargeController.h  ChargeController_Info.cpp  ChargeController_Info.h  ModbusComms.cpp  ModbusComms.h  iChargeControllermain.cpp
src/iDualGPS/: CMakeLists.txt  DualGPS.cpp  DualGPS.h  DualGPS_Info.cpp  DualGPS_Info.h  iDualGPSMain.cpp
src/iGPS/: CMakeLists.txt  GPS.cpp  GPS.h  GPSInfo.cpp  GPSInfo.h  iGPSMain.cpp
src/iGarmin/: CMakeLists.txt  Garmin.cpp  Garmin.h  iGarminMain.cpp
src/iPEARL/: CMakeLists.txt  PEARL.cpp  PEARL.h  PEARL_Info.cpp  PEARL_Info.h  iPEARLmain.cpp
src/iRPISerial/: CMakeLists.txt  RPISerial.cpp  RPISerial.h  RPISerial_Info.cpp  RPISerial_Info.h  iRPISerialMain.cpp
src/lib_NMEA2000/: CMakeLists.txt  N2kCANMsg.h  NMEA2000.cpp  NMEA2000_CAN.h  NMEA2000_SocketCAN.h
src/lib_NMEAParse/: CAMPAnmea.cpp  CAMPAnmea.h  CAMPCnmea.cpp  CAMPCnmea.h  CAMPRnmea.cpp  CAMPRnmea.h  CAMUAnmea.cpp  CAMUAnmea.h  CAMUCnmea.cpp  CAMUCnmea.h  CAMURnmea.cpp  CAMURnmea.h  CAREVnmea.cpp  CAREVnmea.h  CCCFGnmea.cpp  CCCFGnmea.h  CCCFQnmea.cpp  CCCFQnmea.h  CCMPCnmea.cpp  CCMPCnmea.h  CCMUCnmea.cpp  CCMUCnmea.h  CMakeLists.txt  CPIMUnmea.cpp  CPIMUnmea.h  CPNVGnmea.cpp  CPNVGnmea.h  CPNVRnmea.cpp  CPNVRnmea.h  CPRBSnmea.cpp  CPRBSnmea.h  CPRCMnmea.cpp  CPRCMnmea.h  GPGGAnmea.cpp  GPGGAnmea.h  GPGSAnmea.cpp  GPGSAnmea.h  GPGSTnmea.cpp  GPGSTnmea.h  GPGSVnmea.cpp  (+38 more)
src/lib_SimpleSerial/: SerialComms.cpp  SerialComms.h
src/lib_gpsParser/: .project  CMakeLists.txt  gpsParser.cpp  gpsParser.h
src/pPearlPID/: CMakeLists.txt  PIDEngine.cpp  PIDEngine.h  PearlPID.cpp  PearlPID.h  PearlPID_Info.cpp  PearlPID_Info.h  main.cpp  pPearlPID.moos
src/uSunTracking/: CMakeLists.txt  SunTracking.cpp  SunTracking.h  SunTracking_Info.cpp  SunTracking_Info.h  uSunTrackingmain.cpp
(+53 files in other folders)
